tests/checker/bad/lib/BadADTLib2.scillib
library BadADTLib2

type TestType1 =
| Item1 of Int32
| Item2

type TestType2 =
| Item1 of Int32
| Item4
